<resources>
    <string name="app_name">Booking room</string>
    <string name="baseURL">http://172.20.10.3:8080/</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="downloading">Загрузка…</string>

    <string name="titleNoInternet">Интернет</string>
    <string name="titleAuthentication">Авторизация</string>
    <string name="titleRegistration">Регистрация</string>
    <string name="titleProfile">Профиль</string>
    <string name="titleHome">Основное</string>
    <string name="titleAllClients">Все клиенты</string>
    <string name="titleAllRooms">Комнаты</string>
    <string name="titleComplaint">Жалоба</string>
    <string name="titleClientInfoRoom">Информация</string>
    <string name="titleTreatmentOfBookedRoom">Обработка</string>
    <string name="titleAllBids">Мои заявления</string>
    <string name="titleAllBidsAdmin">Заявления</string>
    <string name="titleBidInfo">Информация о заявке</string>
    <string name="damageTitle">Ущерб</string>
    <string name="titleTopService">ТОП-сервис</string>
    <string name="titleStatistic">Статистика (.csv)</string>
    <string name="textNoInternetConnectionTextView">Отсутствует подключение к интернету!</string>
    <string name="textUpdateButton">Обновить</string>
    <string name="textAuthenticationTextView">Вход</string>
    <string name="textRegistrationTextView">Создать аккаунт</string>
    <string name="textCreateAccountTextView"><u>Создать аккаунт</u></string>
    <string name="hintUsernameEditText">Введите логин</string>
    <string name="hintPasswordEditText">Введите пароль</string>
    <string name="hintFirstnameEditText">Имя</string>
    <string name="hintSurnameEditText">Фамилия</string>
    <string name="hintMiddleEditText">Отчество (при наличии)</string>
    <string name="hintPassIdEditText">Номер документа</string>
    <string name="hintUsernameSignUpEditText">Логин</string>
    <string name="hintPasswordSignUpEditText">Пароль</string>
    <string name="textPasswordIsSimple">Пароль должен содержать минимум одну заглавную и строчную буквы, один специальный символ и одну цифру. Длина пароля от 8 до 30 символов. </string>
    <string name="textPassportRadioButton">Паспорт</string>
    <string name="textInternationalRadioButton">Заграничный паспорт</string>
    <string name="textSignInButton">Войти</string>
    <string name="textSignUpButton">Создать</string>
    <string name="textCheckDataInToast">Ошибка! Проверьте введенные данные!</string>
    <string name="textAllClientsButton">Все клиенты</string>
    <string name="textTitleSurname">Фамилия: </string>
    <string name="textTitleFirstName">Имя: </string>
    <string name="textTitleMiddleName">Отчество: </string>
    <string name="textTitleRole">Роль: </string>
    <string name="textTitleUsername">Логин: </string>
    <string name="textTitleDocument">Документ: </string>
    <string name="textTitleDocumentID">Номер документа: </string>
    <string name="textTitleDateOfCreation">Дата создания:</string>
    <string name="textExitButton">Выйти</string>
    <string name="textTitleSignOutAlertDialog">Выйти?</string>
    <string name="textMessageSignOutAlertDialog">Вы уверенны, что хотити выйти из аккаунта?</string>
    <string name="textBookRoomButton">Забронировать комнату</string>
    <string name="textAddAdminButton">Создать администратора</string>
    <string name="textAddAdminTitle">Новый администратор</string>
    <string name="textTitleCost">Цена за ночь: </string>
    <string name="textTitleCapacity">Вместимость: </string>
    <string name="textClientOrdersButton">Мои завяления</string>
    <string name="textAllBidsAdminButton">Обаботать заявления</string>
    <string name="textClientComplaintButton">Отправить жалобу</string>
    <string name="textComplaintMessageEditText">Сообщение</string>
    <string name="textTitleComplaintAlertDialog">Отправить жалобу?</string>
    <string name="textComplaintAlertDialog">Вы уверены, что хотите отправить жалобу руководству?</string>
    <string name="textComplaintToast">Жалоба отправлена</string>
    <string name="textComplaintError">Поле не может быть пустым</string>
    <string name="textTitleComplainInfoOne">Если у Вас возникла какая-то проблема, вопрос или есть какое-то предложение - напишите нам!</string>
    <string name="textTitleComplainInfoTwo">В сообщении обязательно укажите: проблему, дату происшествия, номер комнаты проживания и дежурного администратора.</string>
    <string name="textTitleComplainInfoThree">Спасибо Вам за отклик!</string>
    <string name="textSendComplaintButton">Отправить</string>
    <string name="textClientBookRoomButton">Оформить</string>
    <string name="textCostRoom">Цена за ночь:</string>
    <string name="textCapacity">Вместимость:</string>
    <string name="textFloor">Этаж:</string>
    <string name="textWindowView">Вид из окна:</string>
    <string name="textConditioner">Наличие кондиционера:</string>
    <string name="textHairDrier">Наличие фена для волос:</string>
    <string name="textBonus">Дополнительные услуги:</string>
    <string name="textOneBonusCheckBox">Завтра (800 рублей)</string>
    <string name="textTwoBonusCheckBox">Ужин (500 рублей)</string>
    <string name="textThreeBonusCheckBox">Уборка комнаты (1000 рублей)</string>
    <string name="textPayment">Способ оплаты:</string>
    <string name="textPaymentCashRadioButton">Наличие (при заселение)</string>
    <string name="textPaymentCreditCashRadioButton">Банковская карта</string>
    <string name="textDateStart">Дата заселения:</string>
    <string name="textDateFinish">Даты выселения:</string>
    <string name="textSelectDateTextView">Выберите дату</string>
    <string name="textTitleRoomId">Номер комнаты:</string>
    <string name="textTitleComment">Комментарий:</string>
    <string name="textTitleTotalPrice">Итоговая стоимость:</string>
    <string name="textTotalPriceTextView">Идет обработка</string>
    <string name="textCommentTextView">Отправленно на обработку</string>
    <string name="textTitleStatus">Статус:</string>
    <string name="textTitleClient">Клиент:</string>
    <string name="textTitleAllPrice">Финальная стоимость:</string>
    <string name="textTitleBidAdminInfoOne">Изучите заявку на комнату клиента. Проверьте корректность дат, услуг и т.д. Измените статус заявления.</string>
    <string name="textTitleBidAdminInfoTwo">Обязательно добавьте комментарий!</string>
    <string name="textCommentMessageEditText">Комментарий</string>
    <string name="textAcceptButton">Принять</string>
    <string name="textNotAcceptButton">Отклонить</string>
    <string name="textTitleAddAdminInfoOne">Для добавления нового администратора заполните все поля. Ответственность за действия нового администратора несет человек, создавший его.</string>
    <string name="textTitleBidMoneyAdminInfoOne">При возникновении каких-либо проблем со стороны клиента (разбитая посуда, сломанная вещь и т.д.) добавьте сумму ущерба и отправте клиенту.</string>
    <string name="textTitleTwoBidMoneyAdminInfoOne">Обязательно укажите сумму ущерба!</string>
    <string name="textMoneyEditText">Сумма ущерба (в рублях).</string>
    <string name="textSendButton">Отправить</string>
    <string name="topServiceTextButton">ТОП-сервис</string>
    <string name="downloadStatisticSCVTextButton">Скачать статистику (.csv)</string>
    <string name="textTitleTopServiceInfo">Самая популярная услуга, которую заказывали пользователи.</string>
    <string name="textNameTopService">Название услуги:</string>
    <string name="textCostTopService">Цена услуги:</string>
    <string name="textCountTopService">Количество заказов услуги:</string>
    <string name="textTitleStatisticInfoOne">Для выгрузки статистических данный выберите следующие параметры: дата начала выборки, дата конца выборки, администратора, по которому будет происходить выборка.</string>
    <string name="textStatisticDateStart">Дата начала:</string>
    <string name="textStatisticDateFinish">Дата конца:</string>
    <string name="textStatisticAdmin">Администратор: </string>
    <string name="textCreateStatisticButton">Скачать сатистику</string>
    <string name="all_check_in">Кол-во всех заявок:</string>
    <string name="lux_count">Кол-во всех люкс-заявок:</string>
    <string name="total_revenue">Общая выручка:</string>
</resources>